--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=1, initial-scale=1.0" />
     <title>NoWalls Pan Africa</title>
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
 
 </head>
@@ -25,12 +25,12 @@
         <h1>Innovative. Unorthodox.</h1>
         <ul>
 
-          <li><img src="icons/house-crack.svg" alt=""><a href="#hero">Home</a></li>
-          <li><img src="icons/user-astronaut.svg" alt=""><a href="#passion">About-us</a></li>
-          <li><img src="icons/lightbulb.svg" alt=""><a href="#services">Services</a></li>
-          <li><img src="icons/bell.svg" alt=""><a href="#subscribe">Subscribe</a></li>
-          <li><img src="icons/phone.svg" alt=""><a href="#in-touch">Contant-us</a></li>
-          <li><img src="icons/address-card.svg" alt=""><a href="#contact">Contact-details</a></li>
+          <li><img src="./icons/house-crack.svg" alt=""><a href="#hero">Home</a></li>
+          <li><img src="./icons/user-astronaut.svg" alt=""><a href="#passion">About-us</a></li>
+          <li><img src="./icons/lightbulb.svg" alt=""><a href="#services">Services</a></li>
+          <li><img src="./icons/bell.svg" alt=""><a href="#subscribe">Subscribe</a></li>
+          <li><img src="./icons/phone.svg" alt=""><a href="#in-touch">Contant-us</a></li>
+          <li><img src="./icons/address-card.svg" alt=""><a href="#contact">Contact-details</a></li>
 
         </ul>
       </div>
@@ -38,7 +38,7 @@
 
     <section id="hero">
         <nav>
-            <img src="/image/NoWallsLogo.png" alt="" class="logo" />
+            <img src="./image/NoWallsLogo.png" alt="" class="logo" />
             <div class="reference">
                 <a href="#services">Services</a>
                 <a href="#subscribe">Subscribe</a>
@@ -60,28 +60,28 @@
         <div class="images">
             <div class="short">
                 <div class="sh1">
-                    <img src="/image/hero1.png" alt="Hero 1" />
+                    <img src="./image/hero1.png" alt="Hero 1" />
                 </div>
                 <div class="sh2">
-                    <img src="/image/hero2.png" alt="Hero 2" />
+                    <img src="./image/hero2.png" alt="Hero 2" />
                 </div>
             </div>
 
             <div class="big">
 
-                <img src="/image/hero3.png" alt="Hero 3" />
+                <img src="./image/hero3.png" alt="Hero 3" />
 
             </div>
 
             <div class="regular">
 
-                <img src="/image/hero4.png" alt="Hero 4" class="u" />
+                <img src="./image/hero4.png" alt="Hero 4" class="u" />
 
             </div>
 
             <div class="big">
 
-                <img src="/image/hero5.png" alt="Hero 5" />
+                <img src="./image/hero5.png" alt="Hero 5" />
 
             </div>
 
@@ -96,7 +96,7 @@
             </p>
         </div>
         <div class="img">
-            <img src="/image/abt-img.png" />
+            <img src="./image/abt-img.png" />
         </div>
     </section>
 
@@ -109,7 +109,7 @@
             <div class="wrapper">
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv1.png" alt="">
+                        <img src="./image/serv1.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 1</h1>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv2.png" alt="">
+                        <img src="./image/serv2.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 2</h1>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv3.png" alt="">
+                        <img src="./image/serv3.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 3</h1>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv1.png" alt="">
+                        <img src="./image/serv1.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 4</h1>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv2.png" alt="">
+                        <img src="./image/serv2.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 5</h1>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv3.png" alt="">
+                        <img src="./image/serv3.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 6</h1>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv1.png" alt="">
+                        <img src="./image/serv1.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 7</h1>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv2.png" alt="">
+                        <img src="./image/serv2.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 8</h1>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="/image/serv3.png" alt="">
+                        <img src="./image/serv3.png" alt="">
                     </div>
                     <div class="text">
                         <h1>Services 9</h1>
@@ -225,13 +225,13 @@
         </div>
 
         <div class="part2">
-            <img src="/image/mail-listing.png" alt="" />
+            <img src="./image/mail-listing.png" alt="" />
         </div>
     </section>
 
     <section id="in-touch">
         <div class="part1">
-            <img src="/image/geintouch.png" alt="" />
+            <img src="./image/geintouch.png" alt="" />
         </div>
 
         <div class="part2">
@@ -256,14 +256,14 @@
 
             <div class="div">
                 <div class="location">
-                    <img src="/icons/location-arrow.svg" alt="" />
+                    <img src="./icons/location-arrow.svg" alt="" />
                     <p>
                         67 Heritage house <br /> Samora Machel,<br />Harare
                     </p>
                 </div>
 
                 <div class="phone">
-                    <img src="/icons/phone.svg" alt="" />
+                    <img src="./icons/phone.svg" alt="" />
                     <p>+263 778 793 029</p>
                 </div>
             </div>
@@ -271,12 +271,12 @@
     </section>
 
     <footer>
-        <img src="/image/NoWallsLogo.png" alt="" />
+        <img src="./image/NoWallsLogo.png" alt="" />
         <p>Copy&copy; SAIRONZ GAVI 2024 rights reserved</p>
     </footer>
 
 
-    <script src="/js/carousel.js"></script>
+    <script src="./js/carousel.js"></script>
     <script></script>
 
 </body>
