--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <nav>
             <img src="./image/NoWallsLogo.png" alt="" class="logo" />
             <div class="reference">
-                <a href="#services">Services</a>
+                <a href="#services">Services</a>git
                 <a href="#subscribe">Subscribe</a>
-                <a href="#in-touch">Contant-us</a>
+                <a href="#in-touch">Contact-us</a>
             </div>
         </nav>
 
