--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>NoWalls Pan Africa</title>
 
     <link rel="stylesheet" href="./css/style.css" />
-    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
+
 
 </head>
 
@@ -40,7 +40,7 @@
         <nav>
             <img src="./image/NoWallsLogo.png" alt="" class="logo" />
             <div class="reference">
-                <a href="#services">Services</a>git
+                <a href="#services">Services</a>
                 <a href="#subscribe">Subscribe</a>
                 <a href="#in-touch">Contact-us</a>
             </div>
