--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h1>Innovative. Unorthodox.</h1>
         <ul>
 
-          <li><img src="./icons/house-crack.svg" alt=""><a href="#hero">Home</a></li>
-          <li><img src="./icons/user-astronaut.svg" alt=""><a href="#passion">About-us</a></li>
-          <li><img src="./icons/lightbulb.svg" alt=""><a href="#services">Services</a></li>
-          <li><img src="./icons/bell.svg" alt=""><a href="#subscribe">Subscribe</a></li>
-          <li><img src="./icons/phone.svg" alt=""><a href="#in-touch">Contant-us</a></li>
-          <li><img src="./icons/address-card.svg" alt=""><a href="#contact">Contact-details</a></li>
+          <li><img src="./icons/house-crack.png" alt=""><a href="#hero">Home</a></li>
+          <li><img src="./icons/user-astronaut.png" alt=""><a href="#passion">About-us</a></li>
+          <li><img src="./icons/lightbulb.png" alt=""><a href="#services">Services</a></li>
+          <li><img src="./icons/bell.png" alt=""><a href="#subscribe">Subscribe</a></li>
+          <li><img src="./icons/phone.png" alt=""><a href="#in-touch">Contant-us</a></li>
+          <li><img src="./icons/address-card.png" alt=""><a href="#contact">Contact-details</a></li>
 
         </ul>
       </div>
@@ -256,14 +256,14 @@
 
             <div class="div">
                 <div class="location">
-                    <img src="./icons/location-arrow.svg" alt="" />
+                    <img src="./icons/location-arrow.png" alt="" />
                     <p>
                         67 Heritage house <br /> Samora Machel,<br />Harare
                     </p>
                 </div>
 
                 <div class="phone">
-                    <img src="./icons/phone.svg" alt="" />
+                    <img src="./icons/phone.png" alt="" />
                     <p>+263 778 793 029</p>
                 </div>
             </div>
