--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </label>
 
-    <section id="hero">
+    <section id="hero" class="fade-in">
         <nav>
             <img src="./image/NoWallsLogo.png" alt="" class="logo" />
             <div class="reference">
@@ -87,7 +87,7 @@
 
     </section>
 
-    <section id="passion">
+    <section id="passion" class="fade-in">
         <div class="text">
             <h1>Driven by the passion of <br />building your brand!</h1>
             <p>
@@ -103,7 +103,7 @@
 
 
 
-    <section id="services" role="region" aria-label="Services Carousel" aria-live="polite">
+    <section id="services" role="region" aria-label="Services Carousel" aria-live="polite" class="fade-in">
         <h2>Our Services To <br> Deliver Amazing Products</h2>
         <div id="carousel-container" class="carousel">
             <div class="wrapper">
@@ -216,7 +216,7 @@
 
 
 
-    <section id="subscribe">
+    <section id="subscribe" class="fade-in">
         <div class="part1">
             <h1>
                 Let`s create brands & products <br /> People will love!
@@ -229,7 +229,7 @@
         </div>
     </section>
 
-    <section id="in-touch">
+    <section id="in-touch" class="fade-in">
         <div class="part1">
             <img src="./image/geintouch.png" alt="" />
         </div>
@@ -250,7 +250,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="fade-in">
         <div class="part1">
             <h1>NoWalls Pan Africa, Dare To Differ</h1>
 
@@ -277,6 +277,7 @@
 
 
     <script src="./js/carousel.js"></script>
+    <script src="./js/scrollreview.js"></script>
     <script></script>
 
 </body>
